v0.3.4/YJRDB/project/yjrSqlParse/yjrsql.java
/* Generated By:JavaCC: Do not edit this line. yjrsql.java */
package yjrSqlParse;
import java.util.Vector;
import staticContent.*;
import YJRdataBase.*;

public class yjrsql implements yjrsqlConstants {
  public static void main(String args []) throws ParseException
  {
    yjrsql parser = new yjrsql(System.in);
    int j=0;
    //表达式与列定义
    Expression exp=new Expression();
    ColumnDef coldef=new ColumnDef();
    //表约束和表内容
    //TableConstraint tc=new TableConstraint();
    //TableContent tContent=new TableContent();
    //DropTableInfo dt = new DropTableInfo();
    AddDeleteInsertSelect dt = new AddDeleteInsertSelect();
    try
    {
        //parser.expression(exp);
        //新建一个列定义
        //coldef=parser.GetColumnDef();

        //tc=parser.GetTableConstraint();
        //tContent=parser.GetTableContent();
        //dt = parser.GetDropTable();
        dt = parser.GetSelect();
        j=1;
    }
    catch (Exception e)
      {
//        System.out.println(e.getMessage());
      }

         if(0==j){
                System.out.println("\u5339\u914d\u5931\u8d25!");
         }
         else
         {
         System.out.println("\u5339\u914d\u6210\u529f!\n");

         //System.out.println("匹配成功!\n"+(String)((Vector)dt.exeSQL()).get(1));
                //System.out.println("匹配成功!\n"+tContent.getDescribe());
        //System.out.println("匹配成功!\n"+tc.getDescribe());
            //输出这个列定义的值
            //System.out.println("匹配成功!\n"+coldef.getDescribe());
                //System.out.println("匹配成功!表达式的大小为："+exp.getElements().size());
                try
                {
                    dt.executeSQL();
        //System.out.println(StaticMethod.calExpression(exp.getElements()).getString());
                //System.out.println((String)((Vector)tContent.executeSQL()).get(1));
                //for(int i=0;i<v.size();i++)
                   //System.out.println(v.get(i).toString());
                }
                catch (Exception e)
        {
                System.out.println(e.getMessage());
        }
         }
  }

  static final public String GetNumericOperator() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
      t = jj_consume_token(ADD);
      break;
    case MINUS:
      t = jj_consume_token(MINUS);
      break;
    case MULTIPLY:
      t = jj_consume_token(MULTIPLY);
      break;
    case DIVIDE:
      t = jj_consume_token(DIVIDE);
      break;
    case MOD:
      t = jj_consume_token(MOD);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  static final public String GetLogicOperator() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GREAT:
      t = jj_consume_token(GREAT);
      break;
    case LESS:
      t = jj_consume_token(LESS);
      break;
    case EQUAL:
      t = jj_consume_token(EQUAL);
      break;
    case AND:
      t = jj_consume_token(AND);
      break;
    case OR:
      t = jj_consume_token(OR);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  static final public void GetOperand(Expression exp) throws ParseException {
  Token t;
  Operand od = new Operand();
  Operand odm = new Operand();
  Variable var;
  Function f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    case ICONSTANT:
    case FCONSTANT:
    case SCONSTANT:
    case MINUS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
        jj_consume_token(MINUS);
        odm.SetINT(-1);
        exp.addElement(odm);
        exp.addElement(Operator.get("*"));
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ICONSTANT:
        t = jj_consume_token(ICONSTANT);
              od.SetINT(Integer.parseInt(t.image));
              exp.addElement(od);
        break;
      case FCONSTANT:
        t = jj_consume_token(FCONSTANT);
              od.SetFLOAT( Float.parseFloat(t.image));
              exp.addElement(od);
        break;
      case SCONSTANT:
        t = jj_consume_token(SCONSTANT);
              od.SetSTRING(t.image);
              exp.addElement(od);
        break;
      default:
        jj_la1[3] = jj_gen;
        if (jj_2_1(2)) {
          t = jj_consume_token(IDENTIFIER);
           var=new Variable(t.image);
           exp.addElement(var);
        } else if (jj_2_2(2)) {
          f = GetFunction();
          exp.addElement(f);
          //try{
            //	exp.addElement(f.eval()); //f.eval()返回Operand
           //}catch(Exception e) {
            // 	e.printStackTrace();
           //}

        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case 52:
      jj_consume_token(52);
                           exp.addElement(Operator.get("("));
      subexpression(exp);
      jj_consume_token(53);
                           exp.addElement(Operator.get(")"));
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void OpPart(Expression  exp) throws ParseException {
  String opstr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
    case MINUS:
    case MULTIPLY:
    case DIVIDE:
    case MOD:
      opstr = GetNumericOperator();
      exp.addElement(Operator.get(opstr));
      break;
    case GREAT:
    case LESS:
    case EQUAL:
    case AND:
    case OR:
      opstr = GetLogicOperator();
      exp.addElement(Operator.get(opstr));
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    GetOperand(exp);
  }

  static final public void subexpression(Expression exp) throws ParseException {
    GetOperand(exp);
    label_1:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_1;
      }
      OpPart(exp);
    }
  }

  static final public void expression(Expression exp) throws ParseException {
    GetOperand(exp);
    label_2:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_2;
      }
      OpPart(exp);
    }
    jj_consume_token(EOL);
  }

  static final public Expression ParsePartExpression() throws ParseException {
  Expression exp = new Expression();
    subexpression(exp);
    {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Function GetFunction() throws ParseException {
  Function f;
  Token t;
  Expression exp;
    t = jj_consume_token(IDENTIFIER);
        //将函数名称传递
    f = Function.get(t.image);
    f.SetName(t.image);
    jj_consume_token(52);
    //函数名后跟着()
      exp = ParsePartExpression();
    f.AddParam(exp);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(54);
      exp = ParsePartExpression();
      f.AddParam(exp);
    }
    jj_consume_token(53);
    {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  static final public ColumnDef GetColumnDef() throws ParseException {
  ColumnDef coldef=new ColumnDef();
  Token t;
  int i;
  Expression exp=new Expression();
    t = jj_consume_token(IDENTIFIER);
                      coldef.setColName(t.image);
    i = GetDataType();
                      coldef.setColType(i);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNIQUE:
      jj_consume_token(UNIQUE);
                 coldef.setUnique(true);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOTNULL:
      jj_consume_token(NOTNULL);
                  coldef.setNotNull(true);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMARYKEY:
      jj_consume_token(PRIMARYKEY);
                     coldef.setPrimaryKey(true);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQLDEFAULT:
      jj_consume_token(SQLDEFAULT);
      exp = ParsePartExpression();
                                             coldef.setDefaultExp(exp);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    {if (true) return coldef;}
    throw new Error("Missing return statement in function");
  }

  static final public int GetDataType() throws ParseException {
  int i=1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
             i=DataType.INT;
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
                i=DataType.FLOAT;
      break;
    case STRING:
      jj_consume_token(STRING);
                 i=DataType.STRING;
      break;
    case BOOL:
      jj_consume_token(BOOL);
               i=DataType.BOOL;
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return i;}
    throw new Error("Missing return statement in function");
  }

  static final public TableConstraint GetTableConstraint() throws ParseException {
        Token t;
        //表达式和约束
        Expression exp = new Expression();
        TableConstraint tc=new TableConstraint();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONSTRAINT:
      jj_consume_token(CONSTRAINT);
      t = jj_consume_token(IDENTIFIER);
                                      tc.setTcName(t.image);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHECK:
      jj_consume_token(CHECK);
      exp = ParsePartExpression();
                        tc.setTcType(3);
                        tc.addElement(exp);
      break;
    case PRIMARYKEY:
      jj_consume_token(PRIMARYKEY);
      jj_consume_token(52);
      t = jj_consume_token(IDENTIFIER);
                                tc.setTcType(1);
                        tc.addElement(t.image);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 54:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_4;
        }
        jj_consume_token(54);
        t = jj_consume_token(IDENTIFIER);
                                               tc.addElement(t.image);
      }
      jj_consume_token(53);
      break;
    case FOREIGNKEY:
      jj_consume_token(FOREIGNKEY);
                                 tc.setTcType(2);
      jj_consume_token(52);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(53);
                                                   tc.addElement(t.image);
      jj_consume_token(REFERENCES);
      t = jj_consume_token(IDENTIFIER);
                                                  tc.addElement(t.image);
      jj_consume_token(52);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(53);
                                                   tc.addElement(t.image);
                        //1，1代表设置外键时更新和删除操作默认为1
                        tc.addElement(1);
                        tc.addElement(1);
      if (jj_2_5(2)) {
        jj_consume_token(ON);
        jj_consume_token(DELETE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOACTION:
          jj_consume_token(NOACTION);
          break;
        case RESTRICT:
          jj_consume_token(RESTRICT);
          break;
        case SETNULL:
          jj_consume_token(SETNULL);
                                                                 tc.setElement(3,2);
          break;
        case CASCADE:
          jj_consume_token(CASCADE);
                                                                                                     tc.setElement(3,3);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ON:
        jj_consume_token(ON);
        jj_consume_token(UPDATE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOACTION:
          jj_consume_token(NOACTION);
          break;
        case RESTRICT:
          jj_consume_token(RESTRICT);
          break;
        case SETNULL:
          jj_consume_token(SETNULL);
                                                                 tc.setElement(4,2);
          break;
        case CASCADE:
          jj_consume_token(CASCADE);
                                                                                                     tc.setElement(4,3);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return tc;}
    throw new Error("Missing return statement in function");
  }

  static final public TableContent GetTableContent() throws ParseException {
        ColumnDef coldef;
        TableConstraint tc;
        Token t;
        TableContent tContent=new TableContent();
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    t = jj_consume_token(IDENTIFIER);
                                         tContent.settName(t.image);
    jj_consume_token(52);
    coldef = GetColumnDef();
                                        tContent.getvColumn().addElement(coldef);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_5;
      }
      jj_consume_token(54);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        coldef = GetColumnDef();
                                                  tContent.getvColumn().addElement(coldef);
        break;
      case PRIMARYKEY:
      case CHECK:
      case CONSTRAINT:
      case FOREIGNKEY:
        tc = GetTableConstraint();
                                                  tContent.getvConstraint().addElement(tc);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(53);
    jj_consume_token(EOL);
                {if (true) return tContent;}
    throw new Error("Missing return statement in function");
  }

  static final public DropTableInfo GetDropTable() throws ParseException {
  Token t;
  DropTableInfo dti=new DropTableInfo();
    jj_consume_token(DROP);
    jj_consume_token(TABLE);
    t = jj_consume_token(IDENTIFIER);
                                        dti.setsTablename(t.image);
    jj_consume_token(EOL);
    {if (true) return dti;}
    throw new Error("Missing return statement in function");
  }

  static final public AddDeleteInsertSelect GetSelect() throws ParseException {
    Token t;
    AddDeleteInsertSelect dt = new AddDeleteInsertSelect();
    //增删改查标志
    int num;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INSERT:
      jj_consume_token(INSERT);
      jj_consume_token(INTO);
      t = jj_consume_token(IDENTIFIER);
                                     dt.setsTablename(t.image);
      jj_consume_token(VALUES);
      jj_consume_token(52);
      t = jj_consume_token(IDENTIFIER);
                         dt.setValues(t.image);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 54:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_6;
        }
        jj_consume_token(54);
        t = jj_consume_token(IDENTIFIER);
                                             dt.setValues(t.image);
      }
      jj_consume_token(53);
      jj_consume_token(EOL);
            dt.num=1;
            {if (true) return dt;}
      break;
    case DELETE:
      jj_consume_token(DELETE);
      jj_consume_token(FROM);
      t = jj_consume_token(IDENTIFIER);
                                          dt.setsTablename(t.image);dt.setcolname("all");
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHERE:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_7;
        }
        jj_consume_token(WHERE);
        t = jj_consume_token(IDENTIFIER);
                                  dt.getscolname().removeAllElements();dt.setcolname(t.image);
        jj_consume_token(EQUAL);
        t = jj_consume_token(IDENTIFIER);
                                 dt.setValues(t.image);
      }
      jj_consume_token(EOL);
         dt.num=2;
         {if (true) return dt;}
      break;
    case UPDATE:
      jj_consume_token(UPDATE);
      t = jj_consume_token(IDENTIFIER);
                             dt.setsTablename(t.image);
      jj_consume_token(SET);
      t = jj_consume_token(IDENTIFIER);
                          dt.setcolname(t.image);
      jj_consume_token(EQUAL);
      t = jj_consume_token(IDENTIFIER);
                            dt.setValues(t.image);
      jj_consume_token(WHERE);
      t = jj_consume_token(IDENTIFIER);
                            dt.setcolname(t.image);
      jj_consume_token(EQUAL);
      t = jj_consume_token(IDENTIFIER);
                            dt.setValues(t.image);
      jj_consume_token(EOL);
        dt.num=3;
        {if (true) return dt;}
      break;
    case SELECT:
      jj_consume_token(SELECT);
      t = jj_consume_token(IDENTIFIER);
                                    dt.setcolname(t.image);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 54:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_8;
        }
        jj_consume_token(54);
        t = jj_consume_token(IDENTIFIER);
                                                             dt.setcolname(t.image);
      }
      jj_consume_token(FROM);
      t = jj_consume_token(IDENTIFIER);
                                 dt.setsTablename(t.image);
      jj_consume_token(EOL);
             dt.num=4;
             {if (true) return dt;}
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_3_4() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(ON)) return true;
    if (jj_scan_token(DELETE)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }
